--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
-
+title: Sreenija764
+#logo
+description: Gitam University| Resonance | sri sathya sai vidya vihar
+#show_downloads: true
+theme: jekyll-theme-minimal
